Change: Card, Favorites, ListForm, store.js, App.js

--- a/src/components/Favorites/Favorites.module.scss
+++ b/src/components/Favorites/Favorites.module.scss
@@ -16,4 +16,17 @@
     font-size: 16px;
     line-height: 1.5;
   }
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      background-color: $color-light;
+      margin: 10px;
+      padding: 10px;
+      border-radius: 3px;
+      color: $color-dark;
+    }
+  }
 }
